--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <li><a href="https://webbluetoothcg.github.io/demos/bluetooth-racing-cars/">bluetooth-racing-cars</a></li>
   <li><a href="https://webbluetoothcg.github.io/demos/bluetooth-rename/">bluetooth-rename</a></li>
   <li><a href="https://webbluetoothcg.github.io/demos/bluetooth-toy-bb8/">bluetooth-toy-bb8</a></li>
+  <li><a href="bluetooth-toy-bb8/">bluetooth-toy-bb8 TRY ME</a></li>
   <li><a href="https://webbluetoothcg.github.io/demos/bluetooth-toy-plane/">bluetooth-toy-plane</a></li>
   <li><a href="https://webbluetoothcg.github.io/demos/heart-rate-sensor/">heart-rate-sensor</a></li>
   <li><a href="https://webbluetoothcg.github.io/demos/playbulb-candle/">playbulb-candle</a></li>
