--- a/bluetooth-robot-bug/index.html
+++ b/bluetooth-robot-bug/index.html
@@ -16,7 +16,7 @@ limitations under the License.
 -->
 <html>
   <head>
-    <title>Bluetooth BB-8</title>
+    <title>Robot Bug!!!</title>
     <meta name="description" content="Control a BB-8 toy robot with a Web Bluetooth app.">
 
     <meta charset="utf-8">
