--- a/bluetooth-robot-bug/index.html
+++ b/bluetooth-robot-bug/index.html
@@ -116,7 +116,7 @@ limitations under the License.
   <body unresolved>
     <template id="Toy" is="dom-bind">
       <div id="cards">
-        <paper-card heading="Bluetooth BB-8">
+        <paper-card heading="Robot Bug Card">
           <div class="card-content">
             <paper-toggle-button class="blue" id="connect">Connect</paper-toggle-button>
             <paper-progress id="progress" indeterminate></paper-progress>
@@ -131,7 +131,7 @@ limitations under the License.
 
         <paper-dialog id="dialog">
           <h2>Error</h2>
-          <p>Could not connect to bluetooth device!</p>
+          <p>Could not connect to bluetooth device, oopsie!</p>
         </paper-dialog>
       </div>
 
