--- a/bluetooth-robot-bug/index.html
+++ b/bluetooth-robot-bug/index.html
@@ -292,7 +292,7 @@ limitations under the License.
                 console.log('Command write done.' + data);
                 busy = false;
             }).catch(handleError);
-          else {            
+          } else {            
             navigator.bluetooth.requestDevice({
               filters: [{
                 services: ['708a96f0-f200-4e2f-96f0-9bc43c3a31c8']
