--- a/bluetooth-robot-bug/index.html
+++ b/bluetooth-robot-bug/index.html
@@ -175,6 +175,8 @@ limitations under the License.
         let sequence = 0;
         let heading = 0;
         let busy = false;
+        let l = 0;
+        let r = 0;
         progress.hidden = true;
 
         if (navigator.bluetooth == undefined) {
